# poc-knative-lambda

./: README.md  make  pyproject.toml
deploy/: event-source.yaml  service.yaml
src/: __main__.py
