[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "poc-knative-lambda"
version = "0.1.0"
description = "A Proof of Concept of a lambda function based on Knative."
authors = ["José Antonio Perdiguero López <perdy@perdy.io>"]

[tool.poetry.dependencies]
python = "^3.9.0"
clinner = "^1.12"
cloudevents = "^1.2.0"
flama = "^0.16.0"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
faust-streaming = {version = "^0.4", extras = ["debug"]}
pytest = "^5.0"
flake8 = "^3.5"
isort = "^4.3"
pytest-xdist = "^1.22"
pytest-cov = "^2.5"
freezegun = "^0.3.15"
coverage = "^4.5"
ipython = "^7.6"
ipdb = "^0.12"
pytest-asyncio = "^0.10"
black = {version = "^19.3b0", allow-prereleases = true}
pytest-bdd = "^3.2.1"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | build
  | dist
)/
'''
